--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,17 @@
 .column {
-    background-color: #E4B6CB;
+  margin-top: 20px;
+  padding: 0;
+  height: 300px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 .jojo {
-    height: 300px;
-    width: 180px;
+  height: 100%;
+  width: auto;
+}
+@media (max-width: 420px) {
+  .column {
+      margin-top: 0;
+  }
 }
