--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: jojos;
+    src: url('/sf_fedora/SF Fedora Titles Italic.tff');
+}
 html,body{
     height: 100%;
 }
@@ -20,6 +24,7 @@ body {
     height: 70px;
 }
 .brand-name {
+    font-family: jojos;
     font-size: 40px;
     letter-spacing: 6px;
 }
