--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -9,6 +9,13 @@
 .jojo {
   height: 100%;
   width: auto;
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 5px;
+  background-color: white;;
+}
+.jojo:hover {
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
 }
 @media (max-width: 420px) {
   .column {
