--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
 }
 html,body{
     height: 100%;
+    overflow: auto;
 }
 body {
     padding-top: 78px;
@@ -27,9 +28,4 @@ body {
     font-family: jojos;
     font-size: 40px;
     letter-spacing: 6px;
-}
-@media (max-width: 1400px) {
-    html,body {
-        max-height: 100%;
-    }
 }
