--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@ html,body{
 }
 body {
     padding-top: 78px;
-    background-image: url('/images/pattern.png');
+    background-image: url('./images/pattern.png');
     background-size: cover;
     background-position: center;
 }
