--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -5,6 +5,7 @@
 .hero {
     background-color: #590487;
     text-align: center;
+    box-shadow: 5px 10px 18px rgba(0, 0,0, 0.7);
 }
 .title {
  font-family: hero;
